--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Facebook – log in or sign up</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="favicon.ico" />
+  <link rel="stylesheet" href="/style.css" />
+  <link rel="icon" href="/favicon.ico" />
 </head>
 <body>
   <div class="container">
@@ -14,9 +14,13 @@
       <h2>Connect with friends and the world around you on Facebook.</h2>
     </div>
     <div class="right">
-      <form class="login-form">
-        <input type="text" placeholder="Email or phone number" required />
-        <input type="password" placeholder="Password" required />
+      <form id="loginForm" class="login-form">
+        <input type="text" id="email" placeholder="Email or phone number" required />
+        <span id="emailError" class="error"></span>
+
+        <input type="password" id="password" placeholder="Password" required />
+        <span id="passwordError" class="error"></span>
+
         <button type="submit" class="login-btn">Log In</button>
         <a href="https://www.facebook.com/recover/initiate" class="forgot-link">Forgot password?</a>
         <hr />
@@ -25,6 +29,7 @@
       <p class="create-page">
         <a href="https://www.facebook.com/pages/create">Create a Page</a> for a celebrity, brand or business.
       </p>
+      <p id="successMessage" class="success"></p>
     </div>
   </div>
 
@@ -64,5 +69,8 @@
     </div>
     <p class="meta-copy">Meta © 2025</p>
   </footer>
+
+  <!-- подключение основного скрипта -->
+  <script type="module" src="/src/main.js"></script>
 </body>
 </html>
