--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
 <body>
   <div class="container">
     <div class="left">
-      <img src="https://static.xx.fbcdn.net/rsrc.php/y1/r/4lCu2zih0ca.svg" alt="Facebook" class="logo" />
+      <img 
+        src="https://static.xx.fbcdn.net/rsrc.php/y1/r/4lCu2zih0ca.svg" 
+        alt="Facebook" 
+        class="logo" 
+      />
       <h2>Connect with friends and the world around you on Facebook.</h2>
     </div>
+
     <div class="right">
       <form id="loginForm" class="login-form">
         <input type="text" id="email" placeholder="Email or phone number" required />
@@ -26,19 +31,30 @@
         <hr />
         <button type="button" class="create-btn">Create new account</button>
       </form>
+
       <p class="create-page">
         <a href="https://www.facebook.com/pages/create">Create a Page</a> for a celebrity, brand or business.
       </p>
+
       <p id="successMessage" class="success"></p>
     </div>
   </div>
 
   <footer class="footer">
     <div class="languages">
-      <a href="#">English (US)</a><a href="#">Polski</a><a href="#">ślōnskŏ gŏdka</a><a href="#">Русский</a>
-      <a href="#">Deutsch</a><a href="#">Français (France)</a><a href="#">Italiano</a><a href="#">Українська</a>
-      <a href="#">Español (España)</a><a href="#">Português (Brasil)</a><a href="#">العربية</a>
+      <a href="#">English (US)</a>
+      <a href="#">Polski</a>
+      <a href="#">ślōnskŏ gŏdka</a>
+      <a href="#">Русский</a>
+      <a href="#">Deutsch</a>
+      <a href="#">Français (France)</a>
+      <a href="#">Italiano</a>
+      <a href="#">Українська</a>
+      <a href="#">Español (España)</a>
+      <a href="#">Português (Brasil)</a>
+      <a href="#">العربية</a>
     </div>
+
     <div class="links">
       <a href="https://www.facebook.com/reg">Sign Up</a>
       <a href="https://www.facebook.com/login">Log In</a>
@@ -67,10 +83,10 @@
       <a href="https://www.facebook.com/help/">Help</a>
       <a href="https://www.facebook.com/help/contact/268228883256323">Contact Uploading & Non-Users</a>
     </div>
+
     <p class="meta-copy">Meta © 2025</p>
   </footer>
 
-  <!-- подключение основного скрипта -->
   <script type="module" src="/src/main.js"></script>
 </body>
 </html>
