--- a/index.html
+++ b/index.html
@@ -29,17 +29,18 @@
         <button type="submit" class="login-btn">Log In</button>
         <a href="https://www.facebook.com/recover/initiate" class="forgot-link">Forgot password?</a>
         <hr />
-        <button type="button" class="create-btn">Create new account</button>
+        <a href="https://www.facebook.com/reg/">
+          <button type="button" class="create-btn">Create new account</button>
+        </a>
       </form>
 
       <p class="create-page">
-        <a href="https://www.facebook.com/pages/create">Create a Page</a> for a celebrity, brand or business.
+        <a href="https://www.facebook.com/pages/create">Create a Page for a celebrity, brand or business.</a>
       </p>
 
       <p id="successMessage" class="success"></p>
     </div>
   </div>
-
   <footer class="footer">
     <div class="languages">
       <a href="#">English (US)</a>
