--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
       <p id="successMessage" class="success"></p>
     </div>
   </div>
-  <footer class="footer">
+
+<footer class="footer">
+  <div class="footer-inner">
     <div class="languages">
       <a href="#">English (US)</a>
       <a href="#">Polski</a>
@@ -86,8 +88,5 @@
     </div>
 
     <p class="meta-copy">Meta © 2025</p>
-  </footer>
-
-  <script type="module" src="/src/main.js"></script>
-</body>
-</html>
+  </div>
+</footer>
