--- a/index.html
+++ b/index.html
@@ -29,21 +29,18 @@
         <button type="submit" class="login-btn">Log In</button>
         <a href="https://www.facebook.com/recover/initiate" class="forgot-link">Forgot password?</a>
         <hr />
-        <a href="https://www.facebook.com/reg/">
-          <button type="button" class="create-btn">Create new account</button>
-        </a>
+        <button type="button" class="create-btn">Create new account</button>
       </form>
 
       <p class="create-page">
-        <a href="https://www.facebook.com/pages/create">Create a Page for a celebrity, brand or business.</a>
+        <a href="https://www.facebook.com/pages/create">Create a Page</a> for a celebrity, brand or business.
       </p>
 
       <p id="successMessage" class="success"></p>
     </div>
   </div>
 
-<footer class="footer">
-  <div class="footer-inner">
+  <footer class="footer">
     <div class="languages">
       <a href="#">English (US)</a>
       <a href="#">Polski</a>
@@ -88,5 +85,8 @@
     </div>
 
     <p class="meta-copy">Meta © 2025</p>
-  </div>
-</footer>
+  </footer>
+
+  <script type="module" src="/src/main.js"></script>
+</body>
+</html>
