main index style 1

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   <link rel="icon" href="/favicon.ico" />
 </head>
 <body>
+  <div class="language-switcher">
+    <select id="langSelect">
+     <option value="en">English (US)</option>
+     <option value="ru">Русский</option>
+   </select>
+  </div>
+
   <div class="container">
     <div class="left">
       <img 
