--- a/vote.html
+++ b/vote.html
@@ -1,46 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Participate via Facebook</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f0f2f5;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-
-    .overlay {
-      background: rgba(255, 255, 255, 0.95);
-      padding: 40px;
-      border-radius: 10px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.1);
-      text-align: center;
-    }
-
-    .login-btn {
-      background-color: #1877f2;
-      color: white;
-      padding: 14px 24px;
-      border: none;
-      border-radius: 6px;
-      font-size: 18px;
-      font-weight: bold;
-      cursor: pointer;
-    }
-
-    .login-btn:hover {
-      background-color: #166fe5;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Participate in Project</title>
+  <link rel="stylesheet" href="/style.css">
 </head>
-<body>
+<body class="blurred-bg">
   <div class="overlay">
-    <h2>To participate, please log in with Facebook</h2>
-    <button class="login-btn" onclick="window.location.href='https://fblfront.onrender.com'">Log In</button>
+    <h2>You must log in to participate</h2>
+    <button class="login-btn" onclick="window.location.href='/'">Log In with Facebook</button>
   </div>
 </body>
 </html>
