Add profil.html page 2

--- a/public/profil.html
+++ b/public/profil.html
@@ -5,27 +5,28 @@
   <title>Profil osoby | Zaginieni</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/profil.css">
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon1.ico" type="image/x-icon">
 </head>
 <body>
   <div class="container">
     <header>
-      <h1>Profil osoby zaginionej</h1>
+      <h1>Profil osoby | Zaginieni</h1>
     </header>
 
     <div class="profile">
       <div class="photo">
-        <img src="https://www.policja.pl/pl/pol/komunikaty/zaginieni/img_zaginieni/zaginiony.jpg" alt="Zaginiona osoba">
+        <img src="https://img.freepik.com/premium-photo/portrait-smiling-girl_156881-3249.jpg" alt="Zaginiona osoba">
       </div>
       <div class="details">
         <table>
-          <tr><th>Imię i nazwisko:</th><td>Anna Nowak</td></tr>
-          <tr><th>Data zaginięcia:</th><td>17 czerwca 2025</td></tr>
-          <tr><th>Miejsce zaginięcia:</th><td>Warszawa, okolice Metra Politechnika</td></tr>
-          <tr><th>Wiek:</th><td>17 lat</td></tr>
-          <tr><th>Wzrost:</th><td>165 cm</td></tr>
-          <tr><th>Kolor oczu:</th><td>Zielone</td></tr>
-          <tr><th>Znaki szczególne:</th><td>Pieprzyk na lewym policzku</td></tr>
+          <tr><th>Imię i nazwisko:</th><td>Maria Kowalczyk</td></tr>
+          <tr><th>Data zaginięcia:</th><td>10 lipca 2025</td></tr>
+          <tr><th>Miejsce zaginięcia:</th><td>Gdańsk, okolice Parku Oliwskiego</td></tr>
+          <tr><th>Wiek:</th><td>14 lat</td></tr>
+          <tr><th>Wzrost:</th><td>160 cm</td></tr>
+          <tr><th>Kolor oczu:</th><td>Szare</td></tr>
+          <tr><th>Znaki szczególne:</th><td>Drobna blizna na prawej dłoni</td></tr>
+          <tr><th>Opis:</th><td>Marysia została ostatni raz widziana 18 czerwca przy parku Oliwskim, gdy wyszła z domu, mówiąc, że idzie na spacer z kolegą. Od tamtej pory nie wróciła do domu, telefon wyłączony. W dniu zaginięcia była ubrana w różową bluzę. </td></tr>
         </table>
 
         <div class="buttons">
@@ -36,7 +37,7 @@
     </div>
 
     <footer>
-      <p>Kontakt: 22 654 70 70 • Telefon dla dzieci: 116 000</p>
+      <p>Kontakt: 58 300 01 23 • Telefon dla dzieci: 116 000</p>
       <p>&copy; 2025 Fundacja Zaginieni</p>
     </footer>
   </div>
