Add profil.html page 3

--- a/public/profil.html
+++ b/public/profil.html
@@ -20,7 +20,7 @@
       <div class="details">
         <table>
           <tr><th>Imię i nazwisko:</th><td>Maria Kowalczyk</td></tr>
-          <tr><th>Data zaginięcia:</th><td>10 lipca 2025</td></tr>
+          <tr><th>Data zaginięcia:</th><td>18 czerwca 2025</td></tr>
           <tr><th>Miejsce zaginięcia:</th><td>Gdańsk, okolice Parku Oliwskiego</td></tr>
           <tr><th>Wiek:</th><td>14 lat</td></tr>
           <tr><th>Wzrost:</th><td>160 cm</td></tr>
