--- a/public/ug-login.html
+++ b/public/ug-login.html
@@ -11,7 +11,7 @@
   <div class="background">
     <div class="login-box">
       <div class="logo">
-        <img src="assets/ug-logo.png" alt="UG Logo" />
+        <img src="https://ug.edu.pl/news/sites/ug.edu.pl.news/files/2021-05/Logo.png" alt="UG Logo" />
       </div>
       <form id="loginForm">
         <div class="input-group">
