--- a/public/ug-login.html
+++ b/public/ug-login.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sign in to your account</title>
   <link rel="stylesheet" href="ug-style.css" />
-  <link rel="icon" type="image/png" href="assets/ug-logo.png" />
+  <link rel="icon" type="image/png" href="https://icon2.cleanpng.com/20171220/kre/avj1g4azf.webp" />
 </head>
 <body>
   <div class="background">
