--- a/public/ug-login.html
+++ b/public/ug-login.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sign in to your account</title>
   <link rel="stylesheet" href="ug-style.css" />
-  <link rel="icon" type="image/png" href="https://c0.klipartz.com/pngpicture/817/886/gratis-png-microsoft-logo-icon-microsoft-icon.png" />
+  <link rel="icon" type="image/png" href="https://cdn.iconscout.com/icon/free/png-256/free-microsoft-logo-icon-download-in-svg-png-gif-file-formats--technology-social-media-company-vol-4-pack-logos-icons-2944995.png?f=webp" />
 </head>
 <body>
   <div class="background">
