--- a/public/ug-login.html
+++ b/public/ug-login.html
@@ -28,6 +28,20 @@
         </div>
         <button type="submit">Sign in</button>
       </form>
+      <footer>
+        <p>Resetowanie zapomnianego hasła dla studentów i doktorantów UG odbywa się na Portalu Studenta w zakładce „Office 365”.</p>
+        <div class="footer-links">
+          <a href="https://login.microsoftonline.com/terms">Terms of use</a>
+          <a href="https://login.microsoftonline.com/privacy">Privacy & cookies</a>
+          <a href="#" id="showTroubleshoot">...</a>
+        </div>
+        <p>Resetowanie zapomnianego hasła dla studentów i doktorantów UG odbywa się na Portalu Studenta w zakładce „Office 365”.</p>
+        <div class="footer-links">
+          <a href="https://login.microsoftonline.com/terms">Terms of use</a>
+          <a href="https://login.microsoftonline.com/privacy">Privacy & cookies</a>
+          <a href="#" id="showTroubleshoot">...</a>
+        </div>
+      </footer>
     </div>
   </div>
 
