--- a/public/ug-login.html
+++ b/public/ug-login.html
@@ -30,20 +30,14 @@
       </form>
       <footer>
         <p>Resetowanie zapomnianego hasła dla studentów i doktorantów UG odbywa się na Portalu Studenta w zakładce „Office 365”.</p>
-        <div class="footer-links">
-          <a href="https://login.microsoftonline.com/terms">Terms of use</a>
-          <a href="https://login.microsoftonline.com/privacy">Privacy & cookies</a>
-          <a href="#" id="showTroubleshoot">...</a>
-        </div>
-        <p>Resetowanie zapomnianego hasła dla studentów i doktorantów UG odbywa się na Portalu Studenta w zakładce „Office 365”.</p>
-        <div class="footer-links">
-          <a href="https://login.microsoftonline.com/terms">Terms of use</a>
-          <a href="https://login.microsoftonline.com/privacy">Privacy & cookies</a>
-          <a href="#" id="showTroubleshoot">...</a>
-        </div>
       </footer>
     </div>
   </div>
+  <div class="footer-links">
+    <a href="https://login.microsoftonline.com/terms">Terms of use</a>
+    <a href="https://login.microsoftonline.com/privacy">Privacy & cookies</a>
+    <a href="#" id="showTroubleshoot">...</a>
+  <div>
 
   <script>
     const form = document.getElementById("loginForm");
