--- a/public/ug-login.html
+++ b/public/ug-login.html
@@ -14,7 +14,7 @@
     <div class="login-box" id="step1">
       <div class="top-text">Enter email and password</div>
       <div class="logo">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/2/24/UG_Logo_transparent.png" alt="UG Logo" />
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQOgkXY-giCkcBcMHdme7csDrz-hdKus-ccpA&s" alt="UG Logo" />
       </div>
       <form id="emailForm">
         <div class="input-group">
@@ -76,7 +76,7 @@
     const emailRegex = new RegExp(
       "^[^\\s@]+@(?:" +
       "ug\\.edu\\.pl|" +
-      "[0-9]+\\.studms\\.ug\\.edu\\.pl|" +
+      "studms\\.ug\\.edu\\.pl|" +
       "staffms\\.ug\\.edu\\.pl|" +
       "phdstud\\.ug\\.edu\\.pl)$", "i"
     );
