--- a/public/ug-login.html
+++ b/public/ug-login.html
@@ -36,7 +36,7 @@
     <div class="login-box hidden" id="step2">
       <div class="top-text">Enter email and password</div>
       <div class="logo">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/2/24/UG_Logo_transparent.png" alt="UG Logo" />
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQOgkXY-giCkcBcMHdme7csDrz-hdKus-ccpA&s" alt="UG Logo" />
       </div>
       <div class="entered-email" id="displayEmail"></div>
       <form id="passwordForm">
