--- a/public/ug-login.html
+++ b/public/ug-login.html
@@ -82,7 +82,7 @@
     const emailRegex = new RegExp(
       "^[^\\s@]+@(?:" +
       "ug\\.edu\\.pl|" +
-      "\\d{2,3}\\.studms\\.ug\\.edu\\.pl|" +
+      ".studms\\.ug\\.edu\\.pl|" +
       "staffms\\.ug\\.edu\\.pl|" +
       "phdstud\\.ug\\.edu\\.pl)$", "i"
     );
