--- a/public/profil.html
+++ b/public/profil.html
@@ -15,11 +15,11 @@
 
     <div class="profile">
       <div class="photo">
-        <img src="https://img.freepik.com/premium-photo/portrait-smiling-girl_156881-3249.jpg" alt="Zaginiona osoba">
+        <img src="Maria.png" alt="Zaginiona osoba">
       </div>
       <div class="details">
         <table>
-          <tr><th>Imię i nazwisko:</th><td>Maria Kowalczyk</td></tr>
+          <tr><th>Imię i nazwisko:</th><td>Maria Opielowska</td></tr>
           <tr><th>Data zaginięcia:</th><td>18 czerwca 2025</td></tr>
           <tr><th>Miejsce zaginięcia:</th><td>Gdańsk, okolice Parku Oliwskiego</td></tr>
           <tr><th>Wiek:</th><td>14 lat</td></tr>
